--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,7 @@
   -webkit-transform: scaleX(-1);
   transform: scaleX(-1);
  }
+
+ /* .pro-sidebar > .pro-sidebar-inner{
+  background-color: white !important;
+ } */
