--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,9 @@
   margin-left: 4px;
 }
 
+a{
+  text-decoration: none;
+}
 
 .border-right{
   border-right: 1px solid #dee2e6!important
@@ -45,7 +48,6 @@
 .bg-image {
   background-image: url("assets/doctor.png");
   background-color: #cccccc;
-  /* height: 100vh; */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -58,6 +60,23 @@
   transform: scaleX(-1);
  }
 
- /* .pro-sidebar > .pro-sidebar-inner{
-  background-color: white !important;
- } */
+
+
+ .remove-btn {
+  margin-right: 0.5rem;
+}
+
+.item-enter {
+  opacity: 0;
+}
+.item-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+.item-exit {
+  opacity: 1;
+}
+.item-exit-active {
+  opacity: 0;
+  transition: opacity 500ms ease-in;
+}
