--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@ a:hover {
   cursor: pointer;
 }
 
+/*  */
 .ql-editor > * {
   font-size: medium !important;
 }
@@ -72,4 +73,13 @@ a:hover {
 /* used to remove the horizontal ine from the react-select drop down */
 .css-1okebmr-indicatorSeparator {
   background-color: transparent !important;
+}
+
+.patient-img {
+  width: auto;
+  height: 100px;
+  border-radius: 50%;
+  margin-top: -50px;
+  margin-left: auto;
+  margin-right: auto;
 }
