--- a/src/App.css
+++ b/src/App.css
@@ -83,3 +83,15 @@ a:hover {
   margin-left: auto;
   margin-right: auto;
 }
+
+.dashboard-card {
+  border-radius: 16px;
+  position: relative;
+  z-index: 0;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  box-shadow: none;
+  text-align: center;
+  color: #061b64;
+  background-color: #d1e9fc;
+}
