different modulate updated

--- a/src/App.css
+++ b/src/App.css
@@ -108,3 +108,22 @@ a:hover {
 .swal2-cancel{
   margin-right: 25px;
 }
+
+.loading-process {
+  color: teal;
+  font-size: 2rem;
+  animation: animate 2s infinite;
+}
+
+@keyframes animate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(720deg);
+  }
+}
+
+.css-lzr3bi-LoadingOverlayWrapperBase {
+  border-radius: 5px;
+}
